# pyspatial_tools_2024

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docs/use_cases/: configuration.md
notebooks/: lakehouse.ipynb  spain copy.ipynb  spain.ipynb
resources/data/: data_ingestion.md
resources/template/: dev.env
src/my_app/: configuration.py  test.py
