[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.1"
authors = [{name = "", email = "test@gmail.com"}]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas==0.14.*",
    "pandas==2.2.*",
    "polars==0.20.*",
    "pyspark==3.5.3"
]

[project.optional-dependencies]
dev = [
    # Build
    "build==1.2.*", 
    # Testing
    "pytest",
    "pytest-cov",
    # Docs
    "mkdocs",
    "mike",
    # Dev Tools
    "jupyterlab",
    "ruff"
]
