[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pato_spatial"
version = "0.1.0"
authors = [{name = "Strider", email = "sergio.t.lorenzo@gmail.com"}]
description = "Python spatial data processing engines comparison."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Needed by geopandas for explore()
    "folium", 
    "mapclassify", 
    "matplotlib", 
    # (Geo)Parquet support
    "pyarrow",  
    # Spatial libraries
    "pandas",
    "geopandas",
    "polars",
    "duckdb",
    "scipy",
    "h3",
    "deltalake",
    # Pyspark
    "pyspark==3.5.1",
    "py4j"
]

[project.optional-dependencies]
dev = [
    # Build
    "build", 
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-mock",
    # Docs
    "mkdocs",
    "mike",
    # Dev Tools
    "jupyterlab",
    "ruff"
]

# Ruff settings
[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120